change z-index of navbar to fix bug with the layering of technology badges

--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -12,7 +12,7 @@ header {
   top: 0px;
   width: 100%;
   background-color: white;
-  z-index: 5;
+  z-index: 12;
 }
 ul {
   list-style: none;
